singup, Login, findingID1, findingPW1 html 이미지 경로 수정

--- a/client/src/components/FindingID,PW/FindingPW_1.html
+++ b/client/src/components/FindingID,PW/FindingPW_1.html
@@ -21,7 +21,7 @@
 <body>
     <main>
         <header>
-            <a href="#" id="logo"><img src="/client/src/components/imgs/icon_buildup.png" alt="main"></a>
+            <a href="#" id="logo"><img src="../imgs/icon_buildup.png" alt="main"></a>
         </header>
         <section>
             <h1 class="title">비밀번호 찾기</h1>
