--- a/client/src/components/LoginPage/LoginPage.html
+++ b/client/src/components/LoginPage/LoginPage.html
@@ -30,17 +30,17 @@
                     자동 로그인
                 </label>
                 
-                <a href="/client/src/components/FindingID,PW/FindingID_1.html" id="find_id">아이디 찾기</a>
+                <a href="../FindingID,PW/FindingID_1.html" id="find_id">아이디 찾기</a>
                 <p id="bar">ㅣ</p>
-                <a href="/client/src/components/FindingID,PW/FindingPW_1.html" id="find_password">비밀번호 찾기</a>
+                <a href="../FindingID,PW/FindingPW_1.html" id="find_password">비밀번호 찾기</a>
 
                 <input type="submit" id="login_btn" value="로그인">
             </from>
             <a href="#"><div id="login_google">
-                <img src="/client/src/components/imgs/icon_google.png" alt="google" id="img_google"><span>구글로 계속하기</span>
+                <img src="../imgs/icon_google.png" alt="google" id="img_google"><span>구글로 계속하기</span>
             </div></a>
             <a href="#"><div id="login_naver">
-                <img src="/client/src/components/imgs/icon_naver.png" alt="naver" id="img_naver"><span>네이버로 계속하기</span>
+                <img src="../imgs/icon_naver.png" alt="naver" id="img_naver"><span>네이버로 계속하기</span>
             </div></a>
         </section>
     </main>
