--- a/client/src/components/SignUpPage/SignUpPage_1.html
+++ b/client/src/components/SignUpPage/SignUpPage_1.html
@@ -20,7 +20,7 @@
 <body>
     <main>
         <header>
-            <a href="#" id="logo"><img src="/client/src/components/imgs/icon_buildup.png" alt="main"></a>
+            <a href="#" id="logo"><img src="../imgs/icon_buildup.png" alt="main"></a>
         </header>
         <section id="sign_up">
             <h1 class="title">회원가입</h1>
@@ -52,7 +52,7 @@
             </form>
             <div id="textbox">
             <p>계속하기를 누름으로써 사용자는 빌드업의 <a href="#">사용 약관</a> 및 <a href="#">개인 정보 고지 사항</a>에 동의하는 것입니다.</p>  
-            <p>계정이 이미 있다면 <a href="/client/src/components/LoginPage/LoginPage.html">로그인</a> 하러 가기</p>
+            <p>계정이 이미 있다면 <a href="../LoginPage/LoginPage.html">로그인</a> 하러 가기</p>
         </div>
         </section>
     </main>
