--- a/client/src/components/CSS/FindingID.module.css
+++ b/client/src/components/CSS/FindingID.module.css
@@ -1,4 +1,5 @@
-@import url(../reset.css);
+@import url(./reset.css);
+@import url("https://use.typekit.net/xxxxxxx.css");
 
 html {
     font-size: 10px;
