--- a/client/src/components/CSS/ChangingPW.module.css
+++ b/client/src/components/CSS/ChangingPW.module.css
@@ -1,5 +1,4 @@
-@import url(../reset.css);
-@import url("https://use.typekit.net/xxxxxxx.css");
+@import url(./reset.css);
 
 html {
     font-size: 10px;
@@ -13,16 +12,15 @@ body {
     font-family: noto-sans-cjk-kr,sans-serif;
 }
 
-
-/* 입력창 테두리 */
-.name, .phone {
+/* 입력창 테두리 설정 */
+.name, .id, .phone {
     background: #FFFFFF;
 
     border: hidden;
     border-bottom: 0.1rem solid #DBDBDB;
 }
 
-/* 라벨 폰트 */
+/* 라벨 텍스트 */
 label {
     font-style: normal;
     font-weight: normal;
@@ -31,7 +29,7 @@ label {
 }
 
 /* 버튼 텍스트, 배경색 */
-.phone_btn, .finding_id_btn {
+.phone_btn, .finding_pw_btn {
     background-color: #FFCC00;
 
     font-style: normal;
@@ -40,7 +38,8 @@ label {
     line-height: 2.2rem;
     color: #FFFFFF;
 }
- /* 로고 */
+
+/* 로고 */
 #logo {
     position: absolute;
     width: 7.6rem;
@@ -49,13 +48,13 @@ label {
     top: 2rem;
 }
 
-/* 타이틀 (아이디 찾기) */
-.title1 {
+/* 타이틀 (비밀번호 찾기) */
+.title {
     position: absolute;
     width: 35.5rem;
     height: 3.6rem;
     left: 54.3rem;
-    top: 34.3rem;
+    top: 29.4rem;
 
     font-style: normal;
     font-weight: bold;
@@ -71,11 +70,27 @@ label {
     width: 35.5rem;
     height: 8rem;
     left: 54.3rem;
-    top: 42.5rem;
+    top: 37.6rem;
 }
 
 .name {
     position: absolute;
+    width: 35.5rem;
+    height: 5rem;
+    left: 0px;
+    top: 3.5rem;
+}
+
+/* 아이디 */
+.id_area {
+    position: absolute;
+    width: 35.5rem;
+    height: 8rem;
+    left: 54.3rem;
+    top: 47.4rem;
+}
+
+.id {
     width: 35.5rem;
     height: 5rem;
     left: 0px;
@@ -88,7 +103,7 @@ label {
     width: 35.5rem;
     height: 8rem;
     left: 54.3rem;
-    top: 52.3rem;
+    top: 57.2rem;
 }
 
 .phone {
@@ -105,25 +120,74 @@ label {
     width: 14rem;
     height: 4.9rem;
     left: 21.5rem;
-    top: 3.1rem;
+    top: 3.5rem;
 
     border-radius: 0.5rem;
 }
 
-.finding_id_btn {
+.finding_pw_btn {
     position: absolute;
     width: 35.5rem;
-    height: 4.9rem; 
-    right: 0rem;
-    top: 12rem;
+    height: 4.9rem;
+    left: 54.3rem;
+    top: 68.2rem;
 
     border-radius: 1.5rem;
 }
 
-/* 2 */
+/* PW2 */
+.main2 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 19.8rem;
+}
 
-.main { 
-    margin-top: 32.6rem;
+.main2 .title {
+    font-weight: 700;
+    font-size: 2.4rem;
+}
+
+.input_container {
+    width: 35.3rem;
+    margin-bottom: 1.8rem;
+}
+
+.input_title {
+    text-align: start;
+    font-weight: 400;
+    font-size: 1.5rem;
+}
+
+.input_input {
+    padding: 0.7rem 0rem 0.7rem 2.1rem;
+    border-bottom: 1px solid #DBDBDB;
+}
+
+.input_input input {
+    width: 441px;
+    height: 35px;
+    font-size: 1.5rem;
+}
+
+.precaution {
+    text-align: left;
+    line-height: 1.6rem;
+    font-size: 1.1rem;
+    color: #767676;
+}
+
+
+input:focus {outline:none;}
+
+
+
+
+/* PW3 */
+.main3 { 
+    margin-top: 34.2rem;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -131,7 +195,7 @@ label {
     align-items: center;
 }
 
-.main .title {
+.main3 .title {
     font-weight: 700;
     font-size: 2.4rem;
     line-height: 3.5rem;
@@ -148,17 +212,4 @@ label {
     color: white;
     font-weight: 700;
     font-size: 1.5rem;
-}
-
-.precaution {
-    text-align: start;
-    line-height: 1.6rem;
-    font-size: 1.1rem;
-    color: #767676;
-    width: 35.5rem;
-    margin-top: 1.7rem;
-}
-
-.precaution span {
-    color: #0099FF;
 }
