--- a/client/src/components/CSS/FindingID.module.css
+++ b/client/src/components/CSS/FindingID.module.css
@@ -1,4 +1,5 @@
-@import url(../reset.css);
+@import url(./reset.css);
+@import url("https://use.typekit.net/xxxxxxx.css");
 
 html {
     font-size: 10px;
@@ -12,15 +13,16 @@ body {
     font-family: noto-sans-cjk-kr,sans-serif;
 }
 
-/* 입력창 테두리 설정 */
-.name, .id, .phone {
+
+/* 입력창 테두리 */
+.name, .phone {
     background: #FFFFFF;
 
     border: hidden;
     border-bottom: 0.1rem solid #DBDBDB;
 }
 
-/* 라벨 텍스트 */
+/* 라벨 폰트 */
 label {
     font-style: normal;
     font-weight: normal;
@@ -29,7 +31,7 @@ label {
 }
 
 /* 버튼 텍스트, 배경색 */
-.phone_btn, .finding_pw_btn {
+.phone_btn, .finding_id_btn {
     background-color: #FFCC00;
 
     font-style: normal;
@@ -38,8 +40,7 @@ label {
     line-height: 2.2rem;
     color: #FFFFFF;
 }
-
-/* 로고 */
+ /* 로고 */
 #logo {
     position: absolute;
     width: 7.6rem;
@@ -48,13 +49,13 @@ label {
     top: 2rem;
 }
 
-/* 타이틀 (비밀번호 찾기) */
-.title {
+/* 타이틀 (아이디 찾기) */
+.title1 {
     position: absolute;
     width: 35.5rem;
     height: 3.6rem;
     left: 54.3rem;
-    top: 29.4rem;
+    top: 34.3rem;
 
     font-style: normal;
     font-weight: bold;
@@ -70,27 +71,11 @@ label {
     width: 35.5rem;
     height: 8rem;
     left: 54.3rem;
-    top: 37.6rem;
+    top: 42.5rem;
 }
 
 .name {
     position: absolute;
-    width: 35.5rem;
-    height: 5rem;
-    left: 0px;
-    top: 3.5rem;
-}
-
-/* 아이디 */
-.id_area {
-    position: absolute;
-    width: 35.5rem;
-    height: 8rem;
-    left: 54.3rem;
-    top: 47.4rem;
-}
-
-.id {
     width: 35.5rem;
     height: 5rem;
     left: 0px;
@@ -103,7 +88,7 @@ label {
     width: 35.5rem;
     height: 8rem;
     left: 54.3rem;
-    top: 57.2rem;
+    top: 52.3rem;
 }
 
 .phone {
@@ -120,74 +105,25 @@ label {
     width: 14rem;
     height: 4.9rem;
     left: 21.5rem;
-    top: 3.5rem;
+    top: 3.1rem;
 
     border-radius: 0.5rem;
 }
 
-.finding_pw_btn {
+.finding_id_btn {
     position: absolute;
     width: 35.5rem;
-    height: 4.9rem;
-    left: 54.3rem;
-    top: 68.2rem;
+    height: 4.9rem; 
+    right: 0rem;
+    top: 12rem;
 
     border-radius: 1.5rem;
 }
 
-/* PW2 */
-.main2 {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 19.8rem;
-}
+/* 2 */
 
-.main2 .title {
-    font-weight: 700;
-    font-size: 2.4rem;
-}
-
-.input_container {
-    width: 35.3rem;
-    margin-bottom: 1.8rem;
-}
-
-.input_title {
-    text-align: start;
-    font-weight: 400;
-    font-size: 1.5rem;
-}
-
-.input_input {
-    padding: 0.7rem 0rem 0.7rem 2.1rem;
-    border-bottom: 1px solid #DBDBDB;
-}
-
-.input_input input {
-    width: 441px;
-    height: 35px;
-    font-size: 1.5rem;
-}
-
-.precaution {
-    text-align: left;
-    line-height: 1.6rem;
-    font-size: 1.1rem;
-    color: #767676;
-}
-
-
-input:focus {outline:none;}
-
-
-
-
-/* PW3 */
-.main3 { 
-    margin-top: 34.2rem;
+.main { 
+    margin-top: 32.6rem;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -195,7 +131,7 @@ input:focus {outline:none;}
     align-items: center;
 }
 
-.main3 .title {
+.main .title {
     font-weight: 700;
     font-size: 2.4rem;
     line-height: 3.5rem;
@@ -212,4 +148,17 @@ input:focus {outline:none;}
     color: white;
     font-weight: 700;
     font-size: 1.5rem;
+}
+
+.precaution {
+    text-align: start;
+    line-height: 1.6rem;
+    font-size: 1.1rem;
+    color: #767676;
+    width: 35.5rem;
+    margin-top: 1.7rem;
+}
+
+.precaution span {
+    color: #0099FF;
 }
