--- a/client/src/components/CSS/Mypage.css
+++ b/client/src/components/CSS/Mypage.css
@@ -88,6 +88,7 @@ h3 > span {
     border-radius: 0.5rem;
     width: 14.0rem;
     height: 4.9rem;
+    cursor: pointer;
 
     color: white;
     font-style: normal;
@@ -105,6 +106,7 @@ h3 > span {
     border-radius: 0.9rem;
     width: 21.8rem;
     height: 4.9rem;
+    cursor: pointer;
 
     color: white;
     font-style: normal;
@@ -129,4 +131,3 @@ h3 > span {
     width: 23.6rem;
     height: 31.5rem;
 }
-
