--- a/client/src/components/CSS/FindingID.module.css
+++ b/client/src/components/CSS/FindingID.module.css
@@ -5,13 +5,12 @@ html {
     font-size: 10px;
 }
 
-body {
+/* body {
     width: 1440px;
     height: 1024px;
     background-color: ffffff;
-
     font-family: noto-sans-cjk-kr,sans-serif;
-}
+} 
 
 
 /* 입력창 테두리 */
