--- a/client/src/components/CSS/Landingpage.module.css
+++ b/client/src/components/CSS/Landingpage.module.css
@@ -2,14 +2,9 @@
 
 * {
     font-size: 10px;
-
-}
-.x {
-    font-size: 1.5rem;
-    width: 100%;
 }
 
-.yellow-btn {
+.yellowBtn {
     text-align: center;
     height: 4.9rem;
     width: 21.8rem;
@@ -23,10 +18,35 @@
     line-height: 2.2rem;
   }
 
+/* main 부분 */
+.main {
+    display: flex;
+    margin-top : 4.5rem;
+    margin-bottom: 5.0rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.mainCatchphrase {
+    height: 40rem;
+    width: auto;
+}
+
+.mainText {
+    font-size: 1.5rem;
+    line-height: 2.2rem;
+    height: 4.4rem;
+    text-align: center;
+}
+
+.mainSignup {
+    margin-top : 5.6rem;
+}
+
 /* footer 부분 */
 
-
-.footer-area {
+.footerArea {
     background-color: #EDEDED;
     height: 206px;
     width: 100%;
@@ -37,23 +57,23 @@
     padding: 5.5rem 4rem;  
 }
 
-.footer-container {
+.footerContainer {
     display: flex;
 }
 
-.footer-img {
+.footerImg {
     margin-right: 6.0rem;
     width : 9.6rem;
     height: 9.7rem;
 }
 
-.footer-content {
+.footerContent {
     display: flex;
     flex-direction: column;
     width: 20rem;
 }
 
-.content-title {
+.contentTitle {
     width: 21.5rem;
     font-size: 1.8rem;
     font-weight: bold;
@@ -61,36 +81,8 @@
     margin-bottom: 0.7rem;
 }
 
-.content-content {
+.contentContent {
     width: 22rem;
     font-size: 1.1rem;
     line-height: 1.6rem;
 }
-
-/* main 부분 */
-.main {
-    text-align: center; 
-    height: 55.4rem;
-    display: flex;
-    margin-top : 3.2rem;
-    margin-bottom: 5.0rem;
-}
-
-.main-catchphrase {
-    justify-content: center;
-}
-
-.main-catchphrase img {
-    height: 40rem;
-    width: auto;
-}
-
-.main-text {
-    line-height: 2.2rem;
-    height: 4.4rem;
-}
-
-.main-signup {
-    margin-top : 5.6rem;
-}
-
