--- a/client/src/components/CSS/LoginPage.module.css
+++ b/client/src/components/CSS/LoginPage.module.css
@@ -2,21 +2,34 @@
 
 html {
     font-size: 10px;
+    height: 1024px;
 }
 
-body {
+/* body {
     width: 1440px;
     height: 1024px;
     background-color: ffffff;
-
     font-family: noto-sans-cjk-kr,sans-serif;
-}
+} */
 
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    align-items: center;
+    height: 102.4rem;
+}
+
+/* 타이틀 (로그인) */
+.title {
+    margin-top: 22.4rem;
+    margin-bottom: 5.2rem;
+    font-weight: bold;
+    font-style: normal;
+    font-size: 2.4rem;
+    line-height: 3.6rem;
+    text-align: center;
+
+    color: #000000;
 }
 
 /* 자동로그인, 아이디 비번 찾기 텍스트 */
@@ -27,111 +40,64 @@ body {
     line-height: 1.8rem;
 }
 
-/*인풋 밑줄*/
 .id, .password {
+    display: block;
+    width: 35.5rem;
+    height: 4.9rem;
     background: #FFFFFF;
-
     border: hidden;
     border-bottom: 0.1rem solid #DBDBDB;
-
     font-style: normal;
     font-weight: normal;
     font-size: 1.4rem;
     line-height: 2.1rem;
+    margin-bottom: 1.7rem;
 }
 
-a {
-    text-decoration: none;
-} 
-
-/* 타이틀 (로그인) */
-.title {
-    position: absolute;
-    width: 46.2rem;
-    height: 3.6rem;
-    left: 48.9rem;
-    top: 32rem;
-
-    font-weight: bold;
-    font-style: normal;
-    font-size: 2.4rem;
-    line-height: 3.6rem;
-    text-align: center;
-
-    color: #000000;
-}
-
-/* 아이디 */
-.id {
-    position: absolute;
-    width: 35.5rem;
-    height: 4.9rem;
-    left: 54.2rem;
-    top: 40rem;
-}
-
-/* 비밀번호 */
-.password {
-    position: absolute;
-    width: 35.5rem;
-    height: 4.9rem;
-    left: 54.2rem;
-    top: 47.5rem;
+.find_auto_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 3rem;
 }
 
 /* 자동 로그인 */
 .auto_login_border {
-
-    position: absolute;
     width: 8.8rem;
     height: 1.8rem;
-    left: 54.2rem;
-    top: 53.9rem;
-
+    margin-right: 11.1rem;
     color: #767676;
 }
 
-/* 아이디 찾기 */
 .find_id {
-    position: absolute;
-    width: 5.8rem;
-    height: 1.8rem;
-    left: 74.1rem;
-    top: 54rem;
-
     color: #767676;
+    text-decoration: none;
+}
 
+.find_id::after {
+    content: "|";
+    margin-left : 1rem;
+}
+
+.find_password {
+    color: #767676;
+    margin-left: 1rem;
+    text-decoration: none;
 }
 
 /* 구분선 */
 .bar {
-    position: absolute;
     width: 1.3rem;
     height: 2.1rem;
-    left: 80.7rem;
-    top: 53.9rem;
-
     color: #999999;
-}
-
-/* 비밀번호 찾기 */
-.find_password {
-    position: absolute;
-    width: 6.9rem;
-    height: 1.8rem;
-    left: 82.8rem;
-    top: 54rem;
-
-    color: #767676;
 }
 
 /* Login btn */
 .login_btn {
-    position: absolute;
+    display: block;
     width: 35.5rem;
     height: 4.8rem;
-    left: 54.2rem;
-    top: 59rem;
+    margin-bottom: 1.8rem;
 
     background: #FFCC00;
     border-radius: 1.5rem;
@@ -144,47 +110,51 @@ a {
 
     border: hidden;
 }
+
 /* 구글 , 네이버 로그인 */
-.login_google, .login_naver {
-    position: absolute;
+.snsLoginContainer::after {
+   content: "";
+   display: block;
+   clear: both;
+}
+
+.snslogin {
+    float : left;
     width: 17.3rem;
     height: 4.9rem;
-    top: 65.6rem;
-
+    margin-left: 0.9rem;
     background: #FFFFFF;
     border: 0.1rem solid #DBDBDB;
     border-radius: 0.5rem;
 }
 
-.login_google{
-    left: 54.2rem;
+.snsloginlink {
+    text-decoration: none;
 }
 
-.login_naver {
-    left: 72.4rem;
-}
-
-/* 네이버, 구글 로그인 이미지 배치 */
-div img {
+.google {
     position: relative;
-    width: 2rem;
-    height: 2rem;
-    left: 2rem;
-    top: 1.378rem;
-}
-
-/* 네이버, 구글 로그인 텍스트 */
-.sns_login span {
-    position: relative;
-    left: 3rem;
     top: 1rem;
+    left: 1.8rem;
+    width: 2.1rem;
+    height: 2.1rem;
+}
 
+.naver {
+    position: relative;
+    top: 1rem;
+    left: 1.2rem;
+    width: 2.1rem;
+    height: 2.1rem;
+}
+
+.snsloginlink > span {
+    position: relative;
+    top: 1.45rem;
+    left: 2.3rem;
     font-style: normal;
     font-weight: normal;
     font-size: 1.4rem;
     line-height: 2.1rem;  
-
     color: #767676; 
-    
-
 }
