--- a/client/src/components/CSS/SignUpSuccess.module.css
+++ b/client/src/components/CSS/SignUpSuccess.module.css
@@ -5,17 +5,9 @@ html {
     font-size: 10px;
 }
 
-.logo-fixed {
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 3.7rem;
-    margin-top: 2rem;
-    height: 7.6rem;
-}
-
 /* main 영역 */
-.main { 
-    margin-top: 32.6rem;
+.main {
+    margin-top: 26.6rem; 
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -23,14 +15,13 @@ html {
     align-items: center;
 }
 
-.main .title {
+.title {
     font-weight: 700;
     font-size: 2.4rem;
-    line-height: 3.5rem;
-    margin-bottom: 2.7rem;
+    margin-bottom: 5.4rem;
 }
 
-.yellow-btn {
+.yellowBtn {
     width: 35.5rem;
     text-align: center;
     height: 4.8rem;
@@ -40,18 +31,5 @@ html {
     color: white;
     font-weight: 700;
     font-size: 1.5rem;
-}
-
-.precaution {
-    text-align: start;
-    line-height: 1.6rem;
-    font-size: 1.1rem;
-    color: #767676;
-    width: 35.5rem;
-    margin-top: 1.7rem;
-}
-
-.precaution span {
-    color: #0099FF;
 }
 
