다이어리 퍼블리싱 파일 추가

--- a/client/src/components/CSS/Portfolio.module.css
+++ b/client/src/components/CSS/Portfolio.module.css
@@ -169,10 +169,12 @@ html {
     font-weight: normal;
     font-size: 1.8rem;
     line-height: 2.7rem;
+
+    text-align: center;
 }
 
 .test_score {
-    left: 29.2rem;
+    left: 26.2rem;
 }
 
 .certificate_area {
